tests/syntax_error/typedef_bad_type.jou
typedef lol = 123  # Error: expected a type, got an integer
